Pre-prototype fixes

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 		<section id="trackControls">
 			<p>Drag and drop anywhere or select   </p>
 			<select id="trackSelect">
-				<option value="media/New Adventure Theme.mp3" selected>New Adventure Theme</option>
-				<option value="media/Peanuts Theme.mp3">Peanuts Theme</option>
-				<option value="media/The Picard Song.mp3">The Picard Song</option>
+				<option value="./media/New Adventure Theme.mp3" selected>New Adventure Theme</option>
+				<option value="./media/Peanuts Theme.mp3">Peanuts Theme</option>
+				<option value="./media/The Picard Song.mp3">The Picard Song</option>
 			</select>
 			<button id="playButton" data-playing="no">&#11208;</button>
 			<!-- <button id="previousTrackButton">&#x23EE;</button>
